--- a/redhill/style-rtl.css
+++ b/redhill/style-rtl.css
@@ -441,18 +441,8 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Times, "Times New Roman", serif;
 }
 
-.pagination:before {
-	background: #DDDDDD;
-	height: 1px;
-	content: "";
-	display: block;
-	margin-bottom: 32px;
-}
-
-@media only screen and (min-width: 560px) {
-	.pagination:before {
-		margin-bottom: 64px;
-	}
+.pagination {
+	text-align: center;
 }
 
 .pagination .nav-links > * {
@@ -468,6 +458,20 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 
 .pagination svg {
 	fill: currentColor;
+}
+
+.pagination:before {
+	background: #DDDDDD;
+	height: 1px;
+	content: "";
+	display: block;
+	margin-bottom: 16px;
+}
+
+@media only screen and (min-width: 560px) {
+	.pagination:before {
+		margin-bottom: 64px;
+	}
 }
 
 .post-navigation a {
@@ -495,7 +499,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-bottom: 32px;
+	margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -573,7 +577,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-top: 32px;
+	margin-top: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -3682,18 +3686,8 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Times, "Times New Roman", serif;
 }
 
-.pagination:before {
-	background: #DDDDDD;
-	height: 1px;
-	content: "";
-	display: block;
-	margin-bottom: 32px;
-}
-
-@media only screen and (min-width: 560px) {
-	.pagination:before {
-		margin-bottom: 64px;
-	}
+.pagination {
+	text-align: center;
 }
 
 .pagination .nav-links > * {
@@ -3709,6 +3703,20 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 
 .pagination svg {
 	fill: currentColor;
+}
+
+.pagination:before {
+	background: #DDDDDD;
+	height: 1px;
+	content: "";
+	display: block;
+	margin-bottom: 16px;
+}
+
+@media only screen and (min-width: 560px) {
+	.pagination:before {
+		margin-bottom: 64px;
+	}
 }
 
 .post-navigation a {
@@ -3736,7 +3744,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-bottom: 32px;
+	margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -3814,7 +3822,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-top: 32px;
+	margin-top: 16px;
 }
 
 @media only screen and (min-width: 560px) {
