--- a/redhill/style.css
+++ b/redhill/style.css
@@ -441,6 +441,10 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Times, "Times New Roman", serif;
 }
 
+.pagination {
+	text-align: center;
+}
+
 .pagination .nav-links > * {
 	color: #666666;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -461,7 +465,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-bottom: 32px;
+	margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -495,7 +499,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-bottom: 32px;
+	margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -573,7 +577,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-top: 32px;
+	margin-top: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -3687,6 +3691,10 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Times, "Times New Roman", serif;
 }
 
+.pagination {
+	text-align: center;
+}
+
 .pagination .nav-links > * {
 	color: #666666;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -3707,7 +3715,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-bottom: 32px;
+	margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -3741,7 +3749,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-bottom: 32px;
+	margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 560px) {
@@ -3819,7 +3827,7 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	height: 1px;
 	content: "";
 	display: block;
-	margin-top: 32px;
+	margin-top: 16px;
 }
 
 @media only screen and (min-width: 560px) {
